--- a/example.html
+++ b/example.html
@@ -25,7 +25,7 @@ and open the template in the editor.
         <script src="jquery.koalaform.2.1.2.js" type="text/javascript"></script>
         <script>
             $(document).ready(function() {
-                $.KoalaFormMsgBox("<b>Titulo</b>","Testeando la funcionalidad",null,null,"progress-loading").find("div > p").removeClass("ui-state-highlight").addClass("miClass");
+                $.KoalaFormMsgBox("<b>Titulo</b>","Testeando la funcionalidad",null,null,"progress-loading");
                 $("#signupForm").KoalaForm({
                     onSuccess:function(form){
                         setTimeout(function(){
