--- a/example.html
+++ b/example.html
@@ -19,13 +19,22 @@ and open the template in the editor.
             .ui-koalaform-data select,.ui-koalaform-data button {
                 font-size: 0.8em;
             }
+            .progress-loading {
+                width: 32px;
+                height: 13px;
+                background: url(images/upload.gif) no-repeat 50% 50%;
+            }
+            .miClass {
+                background-color: #000000;
+                color: #FFFFFF;
+            }
         </style>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js" type="text/javascript"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/jquery-ui.min.js" type="text/javascript"></script>
         <script src="js/jquery.koalaform.2.1.2.js" type="text/javascript"></script>
         <script>
             $(document).ready(function() {
-                $.KoalaFormMsgBox("<b>Titulo</b>","Testeando la funcionalidad",null,null,"progress-loading");
+                $.KoalaFormMsgBox("<b>Titulo</b>","Testeando la funcionalidad",null,null,"progress-loading").find("div > p").removeClass("ui-state-highlight").addClass("miClass");
                 $("#signupForm").KoalaForm({
                     onSuccess:function(form){
                         setTimeout(function(){
