--- a/example.html
+++ b/example.html
@@ -31,7 +31,7 @@ and open the template in the editor.
         </style>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js" type="text/javascript"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/jquery-ui.min.js" type="text/javascript"></script>
-        <script src="js/jquery.koalaform.2.1.2.js" type="text/javascript"></script>
+        <script src="js/jquery.koalaform.js" type="text/javascript"></script>
         <script>
             $(document).ready(function() {
                 $.KoalaFormMsgBox("<b>Titulo</b>","Testeando la funcionalidad",null,null,"progress-loading").find("div > p").removeClass("ui-state-highlight").addClass("miClass");
