--- a/example.html
+++ b/example.html
@@ -33,19 +33,29 @@ and open the template in the editor.
                 color: #000000;
             }
         </style>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js" type="text/javascript"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/jquery-ui.min.js" type="text/javascript"></script>
         <script src="js/jquery.koalaform.js" type="text/javascript"></script>
-        <script>
+        <script type="text/javascript">
             $(document).ready(function() {
-                $.KoalaFormMsgBox("<b>Titulo</b>:","Testeando la funcionalidad",null,null,"progress-loading").find("div > p").removeClass("ui-state-highlight").addClass("miClass");
+                $.KoalaFormMsgBox("<b>Titulo</b>:","Testeando $.KoalaFormMsgBox ",null,null,"progress-loading").find("div > p").removeClass("ui-state-highlight").addClass("miClass");
                 $("#signupForm").KoalaForm({
+                    errorMessage: {
+                        title: "<strong>Ta mala la wea</strong>:",
+                        iconClass: ""
+                    },
+                    successMessage: {
+                        title: "<strong>OKKKKK</strong>:",
+                        msg:"Enviando Datos"
+                    },
+                    disableButtonOnSubmit: true,
+                    showOverflow: true,
                     onSuccess:function(form){
                         setTimeout(function(){
                             $.KoalaFormHide(form);
                             $.KoalaFormMsgBox("Enviado:","Todo Ok",null,null,"ui-icon ui-icon-circle-check").find("div > p").removeClass("ui-state-highlight").addClass("success");
+                            $(form).find(":submit").attr("disabled",false);
                         },1000)
-                        $('input[type="submit"]',$(form)).attr("disabled",false);
                         return false;
                     }
                 });
@@ -58,44 +68,44 @@ and open the template in the editor.
                 <legend>FORM Ejemplo</legend>
                 <p>
                     <label for="firstname">Nombre</label>
-                    <input id="firstname" class="next_lastname_ test" name="firstname" />
+                    <input id="firstname" type="text" class="next_lastname_ test" name="firstname" />
                 </p>
                 <p style="display:none">
                     <label for="lastname">Apellido</label>
-                    <input id="lastname" name="lastname" disabled="disabled" />
+                    <input id="lastname" type="text" name="lastname" disabled="disabled" />
                 </p>
                 <p>
-                    <label for="firstname">Celular</label>
-                    <input id="firstname" class="novacio" name="firstname" />
+                    <label for="celular">Celular</label>
+                    <input id="celular" type="text" class="novacio celular" name="celular" />
                 </p>
                 <p>
                     <label for="rangoNumero">Numero entre 0 y 10</label>
-                    <input id="rangoNumero" class="rangoNumerico_0,10_" alt="debe estar en un rango entre 0 y 10" name="rangoNumero" />
+                    <input id="rangoNumero" type="text" class="rangoNumerico_0,10_" alt="debe estar en un rango entre 0 y 10" name="rangoNumero" />
                 </p>
 
                 <p>
                     <label for="fono">Telefono Fijo</label>
-                    <input id="fono" class="fono" name="fono" />
+                    <input id="fono" type="text" class="fono" name="fono" />
                 </p>
                 <p>
                     <label for="numero">Numero Cero positivo</label>
-                    <input id="numero" class="ceroPositivo" name="numero" />
+                    <input id="numero" type="text" class="novacio ceroPositivo" name="numero" />
                 </p>
                 <p>
                     <label for="positivoNovacio">Numero Positivo y no vacio</label>
-                    <input id="positivoNovacio" class="positivo" name="positivoNovacio" />
+                    <input id="positivoNovacio" type="text" class="positivo" name="positivoNovacio" />
                 </p>
                 <p>
                     <label for="numnegativo">Numero Negativo</label>
-                    <input id="numnegativo" class="negativo" name="numnegativo" />
+                    <input id="numnegativo" type="text" class="negativo" name="numnegativo" />
                 </p>
                 <p>
                     <label for="username">Usuario</label>
-                    <input id="username" class="negativo next_campoUrl,password,confirm_password_" name="username"  />
+                    <input id="username" type="text" class="negativo next_campoUrl,password,confirm_password_" name="username"  />
                 </p>
                 <p>
                     <label for="campoUrl">Url</label>
-                    <input id="campoUrl" class="url" name="campoUrl" alt="Debes ingresar una url valida" disabled="disabled" />
+                    <input id="campoUrl" type="text" class="url" name="campoUrl" alt="Debes ingresar una url valida" disabled="disabled" />
                 </p>
                 <p>
                     <label for="password">Contraseña</label>
@@ -107,18 +117,18 @@ and open the template in the editor.
                 </p>
                 <p>
                     <label for="rut">Rut</label>
-                    <input id="rut" class="novacio rut" name="rut" />
+                    <input id="rut" type="text" class="novacio rut" name="rut" />
                 </p>
                 <p>
                     <label for="email">Email</label>
-                    <input id="email" name="email" class="novacio email numero"  />
+                    <input id="email" type="text" name="email" class="novacio email numero"  />
                 </p>
                 <p>
                     <textarea id="js" style="width: 100%; height: 10em;"></textarea>
                 </p>
                 <p>
                     <label for="testHora">Hora</label>
-                    <input id="testHora" class="novacio hora addButton" name="testHora" />
+                    <input id="testHora" type="text" class="novacio hora" name="testHora" />
                 </p>
                 <p>
                 <fieldset id="grupo1" title="Debes Seleccionar solo 2" class="novacio group('==2')">
