--- a/example.html
+++ b/example.html
@@ -42,6 +42,7 @@ and open the template in the editor.
                 $("#signupForm").KoalaForm({
                     disableButtonOnSubmit: true,
                     showOverflow: true,
+                    onBlur: false,
                     onSuccess:function(form){
                         setTimeout(function(){
                             $.KoalaFormHide(form);
