--- a/example.html
+++ b/example.html
@@ -9,6 +9,9 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/themes/base/jquery-ui.css" type="text/css" media="all" />
         <style>
+            #koalaFormBox{
+                font-size: 0.7em;
+            }
             input[disabled] {
                 border: 1px solid #999;
                 background-color: #ddd;
@@ -33,20 +36,19 @@ and open the template in the editor.
                 color: #000000;
             }
         </style>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.8/jquery-ui.min.js" type="text/javascript"></script>
         <script src="js/jquery.koalaform.js" type="text/javascript"></script>
         <script type="text/javascript">
             $(document).ready(function() {
-                $.KoalaFormMsgBox("<b>Titulo</b>:","Testeando $.KoalaFormMsgBox ",null,null,"progress-loading").find("div > p").removeClass("ui-state-highlight").addClass("miClass");
+                $.KoalaFormMsgBox("<b>Titulo</b>:","Testeando $.KoalaFormMsgBox ",null,null,"progress-loading").find("div > div").removeClass("ui-state-highlight").addClass("miClass");
                 $("#signupForm").KoalaForm({
                     disableButtonOnSubmit: true,
                     showOverflow: true,
-                    onBlur: false,
                     onSuccess:function(form){
                         setTimeout(function(){
                             $.KoalaFormHide(form);
-                            $.KoalaFormMsgBox("Enviado:","Todo Ok",null,null,"ui-icon ui-icon-circle-check").find("div > p").removeClass("ui-state-highlight").addClass("success");
+                            $.KoalaFormMsgBox("Enviado:","Todo Ok",null,null,"ui-icon ui-icon-circle-check").find("div > div").removeClass("ui-state-highlight").addClass("success");
                             $(form).find(":submit").attr("disabled",false);
                         },1000)
                         return false;
